// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders VideoMetadata 1`] = `
<div
  className="video-metadata"
>
  <h3>
    video title
  </h3>
  <div
    className="video-stats"
  >
    <span>
      NaN
       views 
    </span>
    <div
      className="video-actions"
    >
      <Rating
        dislikeCount={40}
        likeCount={300}
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="add circle"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;

exports[`Renders VideoMetadata with viewCount 1`] = `
<div
  className="video-metadata"
>
  <h3>
    video title
  </h3>
  <div
    className="video-stats"
  >
    <span>
      10,004
       views 
    </span>
    <div
      className="video-actions"
    >
      <Rating
        dislikeCount={40}
        likeCount={300}
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="add circle"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;
